fix: added missing var in .env
- It was missing APP_PORT to the .env file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
+# Description: Example of .env file
+# Usage: Copy this file to .env and set the values
+
+# Postgres config
+
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=myuser
-DB_PASSWORD=mypassword
-DB_NAME=mydatabase
+DB_USER=user
+DB_PASSWORD=password
+DB_NAME=dev
 DB_SSLMODE=disable
+
+# APP config
+
+APP_PORT=8080
