--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,9 @@
 services:
-  app:
+  cynextime-service:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: cynextime-service
     environment:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
@@ -17,6 +18,7 @@ services:
 
   postgres:
     image: postgres:14-alpine
+    container_name: postgres
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
