--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,11 @@ DB_SSLMODE=disable
 # APP config
 
 APP_PORT=8080
+
+# Swagger config
+
+SWAGGER_HOST=localhost:${APP_PORT}
+SWAGGER_BASE_PATH=/api/v1
+SWAGGER_VERSION=1.0.0
+SWAGGER_TITLE=Cynex Class Service
+SWAGGER_DESCRIPTION=Cynex Class Service API
